2006-07-06  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-module-callback-marshall.c:
	Convert more marshallers.

2006-07-05  Alexander Larsson  <alexl@redhat.com>

	* daemon/daemon-connection.c:
	* libgnomevfs/gnome-vfs-daemon-method.c:
	* libgnomevfs/gnome-vfs-dbus-utils.[ch]:
	* libgnomevfs/gnome-vfs-init.c:
	* libgnomevfs/gnome-vfs-job.[ch]:
	* libgnomevfs/gnome-vfs-module-callback-marshall.c:
	* libgnomevfs/gnome-vfs-module-callback-private.h:
	* libgnomevfs/gnome-vfs-module-callback.c:
	Initial work on module callbacks.

2006-07-05  Alexander Larsson  <alexl@redhat.com>

	* daemon/daemon-connection.c:
	* libgnomevfs/gnome-vfs-daemon-method.[ch]:
	* libgnomevfs/gnome-vfs-dbus-utils.h:
	Change readdir to push an array of fileinfo to allow larger
	chunk size.
	Bump chunk size to 60.

2006-07-05  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-cancellation.c:
	Use _gnome_vfs_get_main_dbus_connection()
	
	* libgnomevfs/gnome-vfs-daemon-method.c: (get_private_connection):
	Add comment.

2006-07-05  Alexander Larsson  <alexl@redhat.com>

	* daemon/daemon-connection.c:
	Lower readdir chunk size again, due to errors.
	Remove all per-connection monitoring stuff.
	Don't escape uris sent as strings.
	
	* daemon/dbus-utils.[ch]:
	Use the right volume/drive dbus types.
	Add some dbus helpers for reply generation and
	name tracking.
	
	* daemon/vfs-daemon.c:
	Implement file monitoring, including cancel when client goes away.
	Remove connection unrefs that were causing asserts.
	
	* libgnomevfs/gnome-vfs-daemon-method.c:
	Send NULL strings as "" again.
	Don't escape uris sent as strings.
	Implement file monitoring client side.
	
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-dbus-utils.[ch]:
	Move main dbus client connection setup here.
	
	* libgnomevfs/gnome-vfs-drive.c:
	* libgnomevfs/gnome-vfs-volume.c:
	Send NULL strings as "" again.
	
	* libgnomevfs/gnome-vfs-volume-monitor-client.[ch]:
	Move out connection setup.
